--- a/.htaccess
+++ b/.htaccess
@@ -5,12 +5,16 @@
         # Redirect requests to index.php
         RewriteCond %{REQUEST_URI} !=/app/index.php
         RewriteCond %{REQUEST_URI} !=/app/lookup.php
+        RewriteCond %{REQUEST_URI} !=/about/ [NC]
+        RewriteCond %{REQUEST_URI} !=/about/index.html [NC]
         RewriteCond %{REQUEST_URI} !.*\.png$ [NC]
         RewriteCond %{REQUEST_URI} !.*\.jpg$ [NC]
         RewriteCond %{REQUEST_URI} !.*\.css$ [NC]
         RewriteCond %{REQUEST_URI} !.*\.gif$ [NC]
         RewriteCond %{REQUEST_URI} !.*\.js$ [NC]
         RewriteCond %{REQUEST_URI} !.*\.xml$ [NC]
+        RewriteCond %{REQUEST_URI} !.*\.py$ [NC]
+        RewriteCond %{REQUEST_URI} !.*\.txt$ [NC]
         RewriteRule .* /app/index.php
 </IfModule>
 
